chore: Atualizando readme.md, relatorios e seeds